# reinstate-revert-revert

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml  setup.cfg
reinstate_revert_revert/: cli.py  parser.py
tests/: test_parser.py  test_reinstate_revert_revert.py
